# mulder

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
mulder/: __init__.py  mulder.py
requirements/: requirements-dev.in  requirements-dev.txt  requirements-vim.in  requirements-vim.txt  requirements.in  requirements.txt
src/mulder/: mecabrc  mulder.py
