[project]
name = "mulder"
version = "0.2.0"
description = "モルダー、あなた疲れてるのよ"
readme = "README.md"
authors = [
    { name = "Tetsutaro Maruyama", email = "tetsutaro.maruyama@gmail.com" }
]
requires-python = ">=3.11"
classifiers = ["Private :: Do Not Upload"]
dependencies = [
    "annotated-types==0.7.0",
    "fugashi==1.4.0",
    "pydantic==2.10.3",
    "pydantic-core==2.27.1",
    "typing-extensions==4.12.2",
    "unidic-lite==1.0.8",
]

[project.scripts]
mulder = "src.mulder.mulder:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "src/mulder/*.py",
    "src/mulder/mecabrc",
]

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
line_length = 80
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true
src_paths = [
    "src/mulder",
]
virtual_env = ".venv"

[tool.ruff]
line-length = 80
src = [
    "src/mulder",
]
target-version = "py311"

[tool.ruff.lint]
select = ["C", "E", "F", "I", "N", "NPY", "PD", "UP", "W"]
ignore = [
    "E203",
    "N803",
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pep8-naming]
classmethod-decorators = [
    # Allow Pydantic's `@validator` decorator to trigger class method treatment.
    "pydantic.validator",
]

[tool.ruff.lint.isort]
combine-as-imports = true
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
known-local-folder = [
    "src/mulder",
]
split-on-trailing-comma = true

[tool.mypy]
python_version = "3.11"
allow_redefinition = true
allow_untyped_globals = false
check_untyped_defs = true
color_output = true
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = false
error_summary = true
ignore_missing_imports = true
implicit_reexport = true
namespace_packages = true
no_implicit_optional = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
#strict = true
warn_redundant_casts = true
warn_unused_configs = true
# TODO: change false to true
warn_unused_ignores = false

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::_pytest.warning_types.PytestWarning",
    "ignore::DeprecationWarning",
]
